syntax = "proto3";
package chipmunkApi;
option go_package = "github.com/h-varmazyar/Gate/services/chipmunk/api/proto";

service AssetService {
  rpc Create(AssetCreateReq) returns (Asset);
  rpc ReturnByID(AssetReturnByIDReq) returns (Asset);
  rpc ReturnBySymbol(AssetReturnBySymbolReq) returns (Asset);
  rpc List(GetAssetListRequest) returns (Assets);
}

message AssetCreateReq {
  // @inject_tag: json:"name"
  string Name = 1;
  // @inject_tag: json:"symbol"
  string Symbol = 2;
}

message Asset {
  // @inject_tag: json:"id"
  string ID = 1;
  // @inject_tag: json:"name"
  string Name = 2;
  // @inject_tag: json:"symbol"
  string Symbol = 3;
  // @inject_tag: json:"created_at"
  int64 CreatedAt = 4;
  // @inject_tag: json:"updated_at"
  int64 UpdatedAt = 5;
}

message Assets {
  // @inject_tag: json:"elements"
  repeated Asset Elements = 1;
}


message AssetReturnByIDReq {
  // @inject_tag: json:"id"
  string ID = 1;
}

message AssetReturnBySymbolReq {
  // @inject_tag: json:"symbol"
  string Symbol = 1;
}

message GetAssetListRequest {
  // @inject_tag: json:"page"
  int32 Page = 1;
}